--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -268,7 +268,7 @@
                                         <div class="paralax-media">
                                             <ul class="creat-list">
                                                 {{#each metadata.tags}}
-                                                <li><a href="/portfolio">{{this}}</a></li>
+                                                <li><a href="/portfolio">{{title}}</a></li>
                                                 {{/each}}
                                             </ul>
                                             <div class="paralax-wrap">
