--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -152,7 +152,7 @@
                                 <div class="serv-item-inner">
                                     <img  src="images/home/mixeduse.jpg"   alt="">
                                     <div class="ser-title">
-                                        <h3>Mixed-Use Development</h3>
+                                        <h3>Property management</h3>
                                     </div>
                                 </div>
                             </a>
@@ -184,11 +184,8 @@
                                     <!-- 2 end --> 
                                     <!-- 3 -->
                                     <div id="ser3" class="serv-details">
-                                        <h3>Mixed-Use Development</h3>
-                                        <p>Development and new construction for residential, and retail/office buildings.</p>
-                                        <ul class="ser-list">
-                                            <li>Residential, retail, and office—both new construction and renovation</li>
-                                        </ul>
+                                        <h3>Property Management</h3>
+                                        <p>We manage each property closely using a vast network. Our expertise provides a high touch service that keeps unites rented and well maintained.</p>
                                     </div>
                                     <!-- 3 end -->  
                                 </div>
