--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -185,7 +185,10 @@
                                     <!-- 3 -->
                                     <div id="ser3" class="serv-details">
                                         <h3>Property Management</h3>
-                                        <p>We manage each property closely using a vast network. Our expertise provides a high touch service that keeps unites rented and well maintained.</p>
+                                        <ul class="ser-list">
+                                            <li>We manage each property closely using a vast network. </li>
+                                            <li>Our expertise provides a high touch service that keeps unites rented and well maintained.</li>
+                                        </ul>
                                     </div>
                                     <!-- 3 end -->  
                                 </div>
