--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,7 @@ p {
 	text-align:left;
 	/*font-size:12px;*/
 	font-size:18px;
-	line-height:24px;
+	line-height:27px;
 	padding-bottom:20px;
 }
 blockquote {
@@ -1010,6 +1010,7 @@ article {
 	float:left;
 	width:100%;
 	padding:10px 0 10px 14px;
+	margin-left: 25px;
 }
 .ser-list li {
 	width:100%;
