--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -67,7 +67,7 @@
             <div class="content dark-bg" id="counter">                                                     
                 <!-- parallax image  -->                        
                 <div class="parallax-inner">
-                    <div class="bg" data-bg="images/home/unsplash-5.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
+                    <div class="bg" data-bg="images/repeat.png" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
                     <div class="overlay"></div>
                 </div>
                 <!-- parallax image  end -->  
@@ -85,7 +85,7 @@
                                     <div class="inline-facts col-md-4 ">
                                         <div class="milestone-counter">
                                             <div class="stats animaper">
-                                                <div class="num" data-content="50" data-num="50">0</div>
+                                                <div class="num" data-content="14" data-num="14">0</div>
                                             </div>
                                         </div>
                                         <h6>Finished projects</h6>
@@ -127,26 +127,6 @@
                             </div>
                         </div>
                         <div class="services-holder">
-                            <!-- 1 -->
-                            <a class="serv-item" href="#ser1">
-                                <div class="serv-item-inner">
-                                    <img  src="images/home/residential.jpg"   alt="">
-                                    <div class="ser-title">
-                                        <h3>Residential Development</h3>
-                                    </div>
-                                </div>
-                            </a>
-                            <!-- 1 end-->
-                            <!-- 2 -->
-                            <a class="serv-item" href="#ser2">
-                                <div class="serv-item-inner">
-                                    <img  src="images/home/commercials.jpg"   alt="">
-                                    <div class="ser-title">
-                                        <h3>Commercial Development</h3>
-                                    </div>
-                                </div>
-                            </a>
-                            <!-- 2 end -->
                             <!-- 3 -->
                             <a class="serv-item" href="#ser3">
                                 <div class="serv-item-inner">
@@ -157,27 +137,29 @@
                                 </div>
                             </a>
                             <!-- 3 end -->
+                            <!-- 2 -->
+                            <a class="serv-item" href="#ser2">
+                                <div class="serv-item-inner">
+                                    <img  src="images/home/commercials.jpg"   alt="">
+                                    <div class="ser-title">
+                                        <h3>Development</h3>
+                                    </div>
+                                </div>
+                            </a>
+                            <!-- 2 end -->
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <!-- serv-post  -->     
-                                <div class="serv-post">
-                                    <!-- 1 -->
-                                    <div id="ser1" class="serv-details">
-                                        <h3>Residential Development</h3>
-                                        <p>Development and new construction of luxury single-family homes, and luxury condominiums. </p>
-                                        <ul class="ser-list">
-                                            <li>Luxury single-family homes 4,000 sf and up</li>
-                                            <li>Multi-unit condominium new construction</li>
-                                            <li>Multi-unit condominium existing building renovation</li>
-                                        </ul>
-                                    </div>
-                                    <!-- 1 end --> 
+                                <div class="serv-post"> 
                                     <!-- 2 -->
                                     <div id="ser2" class="serv-details">
-                                        <h3>Commercial Development</h3>
-                                        <p>Construction and refurbishment for retail, institutional, and office spaces.</p>
+                                        <h3>Development</h3>
+                                        <p>Construction and refurbishment for retail, institutional, and office spaces. Development and new construction of luxury single-family homes, and luxury condominiums.</p>
                                         <ul class="ser-list">
+                                            <li>Multi-unit condominium existing building renovation</li>
+                                            <li>Luxury single-family homes 4,000 sf and up</li>
+                                            <li>Multi-unit condominium new construction</li>
                                             <li>Multi-unit condominium existing building renovation</li>
                                         </ul>
                                     </div>
