--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -13,7 +13,7 @@
             <div class="content">
                 <section class="parallax-section">
                     <div class="parallax-inner">
-                        <div class="bg" data-bg="images/bg/1.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
+                        <div class="bg" data-bg="https://imgix.cosmicjs.com/63404b90-eb3a-11ea-83a7-c9a4a2156827-services.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
                         <div class="overlay"></div>
                     </div>
                     <div class="container">
@@ -41,30 +41,13 @@
                         <div class="row">
                             <div class="col-md-8">
                                 <h2 class="section-title">What <strong>We  Do </strong></h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p>Three Leaf Development believes the formula for success in real estate development is creating value. Our raw land development, existing building renovation, and building expansion projects have all created a finished product of higher value.</p>
+                                <p>With over 30 years of experience in the acquisition, design, and construction of residential and commercial buildings, our simple and straightforward approach helps make value creation easy.</p>
+                                <p>While each project presents different challenges, they are conceptually the same. Three Leaf employs this understanding to streamline scheduling, material procurement,  and quality control from start to finish. We’re ahead of the curve with our communication with subcontractors and suppliers to avoid schedule delays—keeping projects on budget and on track.</p>
+                                <p>The formula of creating value is a simple one, and value is created only when the project is complete.</p>
                             </div>
                         </div>
                         <div class="services-holder">
-                            <!-- 1 -->
-                            <a class="serv-item" href="#ser1">
-                                <div class="serv-item-inner">
-                                    <img  src="images/home/residential.jpg"   alt="">
-                                    <div class="ser-title">
-                                        <h3>Residential Development</h3>
-                                    </div>
-                                </div>
-                            </a>
-                            <!-- 1 end-->
-                            <!-- 2 -->
-                            <a class="serv-item" href="#ser2">
-                                <div class="serv-item-inner">
-                                    <img  src="images/home/commercials.jpg"   alt="">
-                                    <div class="ser-title">
-                                        <h3>Commercial Development</h3>
-                                    </div>
-                                </div>
-                            </a>
-                            <!-- 2 end -->
                             <!-- 3 -->
                             <a class="serv-item" href="#ser3">
                                 <div class="serv-item-inner">
@@ -75,27 +58,29 @@
                                 </div>
                             </a>
                             <!-- 3 end -->
+                            <!-- 2 -->
+                            <a class="serv-item" href="#ser2">
+                                <div class="serv-item-inner">
+                                    <img  src="images/home/commercials.jpg"   alt="">
+                                    <div class="ser-title">
+                                        <h3>Development</h3>
+                                    </div>
+                                </div>
+                            </a>
+                            <!-- 2 end -->
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <!-- serv-post  -->     
-                                <div class="serv-post">
-                                    <!-- 1 -->
-                                    <div id="ser1" class="serv-details">
-                                        <h3>Residential Development</h3>
-                                        <p>Development and new construction of luxury single-family homes, and luxury condominiums. </p>
-                                        <ul class="ser-list">
-                                            <li>Luxury single-family homes 4,000 sf and up</li>
-                                            <li>Multi-unit condominium new construction</li>
-                                            <li>Multi-unit condominium existing building renovation</li>
-                                        </ul>
-                                    </div>
-                                    <!-- 1 end --> 
+                                <div class="serv-post"> 
                                     <!-- 2 -->
                                     <div id="ser2" class="serv-details">
-                                        <h3>Commercial Development</h3>
-                                        <p>Construction and refurbishment for retail, institutional, and office spaces.</p>
+                                        <h3>Development</h3>
+                                        <p>Construction and refurbishment for retail, institutional, and office spaces. Development and new construction of luxury single-family homes, and luxury condominiums.</p>
                                         <ul class="ser-list">
+                                            <li>Multi-unit condominium existing building renovation</li>
+                                            <li>Luxury single-family homes 4,000 sf and up</li>
+                                            <li>Multi-unit condominium new construction</li>
                                             <li>Multi-unit condominium existing building renovation</li>
                                         </ul>
                                     </div>
