--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -13,7 +13,7 @@
             <div class="content">
                 <section class="parallax-section">
                     <div class="parallax-inner">
-                        <div class="bg" data-bg="images/bg/1.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
+                        <div class="bg" data-bg="images/home/about.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
                         <div class="overlay"></div>
                     </div>
                     <div class="container">
@@ -37,7 +37,6 @@
             <!-- content  -->
             <div class="content">
                 <section>
-                    <div class="sect-subtitle right-align-dec" data-top-bottom="transform: translateY(200px);" data-bottom-top="transform: translateY(-200px);"><span>03</span></div>
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
