--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -199,22 +199,17 @@
                             <div class="col-md-8">
                                 <div class="testimon-slider-holder">
                                     <div class="testimon-slider">
-                                        <!-- 1 -->
-                                        <div class="item">
-                                            <a href="https://www.bizjournals.com/milwaukee/news/2019/12/05/bucks-guard-pat-connaughton-shoots-for-milwaukee.html?iana=hpmvp_mil_news_headline" style="color: white;" target="_blank">
-                                                <h3>Bucks guard Pat Connaughton shoots for Milwaukee development on Brady Street</h3>
-                                            </a>
-                                            <a href="https://www.bizjournals.com/milwaukee/news/2019/12/05/bucks-guard-pat-connaughton-shoots-for-milwaukee.html?iana=hpmvp_mil_news_headline" class="text-link" target="_blank">Via Milwaukee Business Journal</a>
-                                        </div>
-                                        <!-- 1 end-->
-                                        <!-- 2 -->
-                                        <div class="item">
-                                            <a href="https://www.bizjournals.com/milwaukee/news/2019/12/05/bucks-guard-pat-connaughton-shoots-for-milwaukee.html?iana=hpmvp_mil_news_headline" style="color: white;">
-                                                <h3>Bucks guard Pat Connaughton shoots for Milwaukee development on Brady Street</h3>
-                                            </a>
-                                            <a href="https://www.bizjournals.com/milwaukee/news/2019/12/05/bucks-guard-pat-connaughton-shoots-for-milwaukee.html?iana=hpmvp_mil_news_headline" class="text-link" target="_blank">Via Milwaukee Business Journal</a>
-                                        </div>
-                                        <!-- 2 end-->
+
+                                        {{#if news}}
+                                            {{#each news}}
+                                                <div class="item">
+                                                    <a href="{{metadata.url}}" style="color: white;" target="_blank">
+                                                        <h3>{{title}}</h3>
+                                                    </a>
+                                                    <a href="{{metadata.url}}" class="text-link" target="_blank">Via {{metadata.source}}</a>
+                                                </div>
+                                            {{/each}}
+                                        {{/if}} 
                                     </div>
                                     <div class="customNavigation">
                                         <a class="prev-slide transition"><i class="fa fa-angle-left"></i></a>
